# ArxBackend

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-ArxBackend  go.mod  go.sum  requirements.txt
golangp/: BUILD.bazel
golangp/apps/arx_center/: BUILD.bazel  main.go
golangp/apps/arx_center/cmd/: BUILD.bazel  cobra.go
golangp/apps/arx_center/cmd/api/: BUILD.bazel  server.go
golangp/apps/arx_center/cmd/config/: BUILD.bazel  server.go
golangp/apps/arx_center/cmd/migration_cmd/: BUILD.bazel  migrate.go
golangp/apps/arx_center/cmd/version/: BUILD.bazel  server.go
golangp/apps/arx_center/controllers/: BUILD.bazel  auth.controller.go  chat.controller.go  conversations.controller.go  creditSystem.go  documents.controller.go  post.controller.go  project.controller.go  prompt.controller.go  s3file.controller.go  user.controller.go  yredis.controller.go
golangp/apps/arx_center/dify/: BUILD.bazel  api-autoComplete.go  api-chat-messages.go  api-conversations.go  api.go  apps.go  client.go  console-datasets-file-upload.go  console-datasets-init.go  console-datasets.go  console-workspaces.go  const.go  files.go  fn-api.go  fn-console.go  fn.go  login.go  messages.go  model.go  passport.go  tags.go
golangp/apps/arx_center/gitea/: BUILD.bazel  admin.client.go  admin.create.go  user.client.go  user.repo.go  user.token.go
golangp/apps/arx_center/migrate/: BUILD.bazel  migrate.go
golangp/apps/arx_center/migrate/gitea/: BUILD.bazel  gitea_sync_user.go
golangp/apps/arx_center/migrate/migration_user/: BUILD.bazel  add_user.go
golangp/apps/arx_center/migrate/model/: BUILD.bazel  document.go  random_create_user.go
golangp/apps/arx_center/migrate/motest/: BUILD.bazel  motest.go
golangp/apps/arx_center/models/: BUILD.bazel  documents.model.go  project-memberr.model.go  project.model.go  prompt.model.go  s3file.model.go  user.model.go  yredis.model.go
golangp/apps/arx_center/routes/: BUILD.bazel  auth.routes.go  chat.routes.go  conversations.routes.go  documents.routes.go  post.routes.go  project.routes.go  prompt.routes.go  s3file.route.go  user.routes.go  yredis.routes.go
golangp/apps/arx_center/service/: BUILD.bazel  documents.go  documents_test.go
golangp/apps/arx_center/service/dto/: BUILD.bazel  documents.go  page.go
golangp/apps/arx_center/service/ws/: BUILD.bazel  collaborative.edit.websocket.go  rest.go  room.go  subscribers.go
golangp/apps/arx_center/tests/controllers/: BUILD.bazel  chat.controller_test.go  random.create.user_test.go
golangp/apps/arx_center/tests/dify/: BUILD.bazel  api-autoComplete_test.go
golangp/apps/arx_center/tests/handle/: BUILD.bazel
golangp/apps/arx_center/tests/utils/: BUILD.bazel  email_test.go
golangp/common/constants/: BUILD.bazel  constants.go
golangp/common/initializers/: BUILD.bazel  config_struct.go  connectDB.go  connectMeili.go  connectRedis.go
golangp/common/logger/: BUILD.bazel  logger.go
golangp/common/middleware/: BUILD.bazel  deserialize-user.go  header.go  sentinel.go
golangp/common/openai-config/: BUILD.bazel  openai-config.example.json  openai-config.go
golangp/common/templates/: chargeSucceed.html  resetPassword.html  shareProject.html  verificationCode.html
golangp/common/utils/: BUILD.bazel  alipay.go  email.go  encode.go  json.go  parse_arr.go  password.go  roomId.go  slice.go  token.go  token_test.go
golangp/common/xhttp/: BUILD.bazel  xhttp.go
golangp/common/xminio/: BUILD.bazel  object-post.go
golangp/config/: BUILD.bazel  config.go  prod-user-2024-0318-1053.sql  settings-dev.yml  settings-prod.yml  settings-test.yml
pythonp/LaTeX-template-converter/: BUILD.bazel  api-service.py  api_test_client.py  function.py  main.py  producepdf.py  streamlit.py  streamlitpdf.py  targetTemplateMainTexMapping.py  targetTemplateRecCompileMapping.py
