load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_viper//:viper",
        "@com_github_toheart_functrace//:functrace",
    ],
)

filegroup(
    name = "config_files",
    srcs = glob(["**/*.yml"]),
    visibility = ["//visibility:public"],
)

exports_files(
    ["settings-dev.yml"],
    visibility = ["//golangp/apps/arx_center:__pkg__"],
)
