load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

py_binary(
    name = "api_service_binary",
    srcs = [
        "api-service.py",
        "main.py",
        "targetTemplateMainTexMapping.py",
        "targetTemplateRecCompileMapping.py",
        "function.py"
    ],
    main = "api-service.py",
    imports = ["."],
    deps = [
         requirement("fastapi"),
         requirement("uvicorn"),
         requirement("python-multipart")
    ],
    data = glob(["templates/*.zip"]) + [
         "targetTemplateMainTexMapping.py",
         "targetTemplateRecCompileMapping.py",
    ],
    visibility = ["//visibility:public"],
)