load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "arx_center",
    args = [
        "server",
        "-c",
        "$(rlocationpath //golangp/config:settings-dev.yml)",
    ],
    data = ["//golangp/config:settings-dev.yml"],
    embed = [":arx_center_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "arx_center_lib",
    srcs = ["main.go"],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center",
    visibility = ["//visibility:private"],
    deps = ["//golangp/apps/arx_center/cmd"],
)
