load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initializers",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/common/initializers",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logger",
        "//golangp/config",
        "@com_github_go_redis_redis_v8//:go_default_library",
        "@com_github_meilisearch_meilisearch_go//:go_default_library",
        "@io_gorm_driver_postgres//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
