load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "initializers",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/common/initializers",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logger",
        "//golangp/config",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_meilisearch_meilisearch_go//:meilisearch-go",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
