load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "openai-config",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/arxtect/ArxBackend/golangp/common/openai-config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_toheart_functrace//:functrace",
    ],
)
