load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "alipay.go",
        "email.go",
        "encode.go",
        "json.go",
        "parse_arr.go",
        "password.go",
        "roomId.go",
        "slice.go",
        "token.go",
    ],
    importpath = "github.com/Arxtect/ArxBackend/golangp/common/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/arx_center/models",
        "//golangp/common/logger",
        "//golangp/config",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_k3a_html2text//:html2text",
        "@com_github_smartwalle_alipay_v3//:alipay",
        "@com_github_toheart_functrace//:functrace",
        "@in_gopkg_gomail_v2//:gomail_v2",
        "@org_golang_x_crypto//bcrypt",
    ],
)
