load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "xhttp",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/common/xhttp",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_toheart_functrace//:functrace",
    ],
)
