load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "xminio",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/common/xminio",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/config",
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_minio_minio_go_v7//pkg/credentials",
    ],
)

go_test(
    name = "xminio_test",
    srcs = ["object-post_test.go"],
    embed = [":xminio"],
)
