load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "dify",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/arxtect/ArxBackend/golangp/apps/arx_center/dify",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logger",
        "//golangp/config",
        "@com_github_toheart_functrace//:go_default_library",
    ],
)
