load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gitea",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/gitea",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/constants",
        "//golangp/config",
        "@com_github_toheart_functrace//:functrace",
        "@io_gitea_code_sdk_gitea//:gitea",
    ],
)
