load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/models",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/constants",
        "@com_github_google_uuid//:uuid",
        "@com_github_lib_pq//:pq",
        "@com_github_toheart_functrace//:functrace",
        "@io_gorm_gorm//:gorm",
    ],
)
