load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "routes",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/routes",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/arx_center/controllers",
        "@com_github_arxtect_arxbackend//golangp/common/middleware:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_toheart_functrace//:go_default_library",
    ],
)
