load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routes",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/routes",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/arx_center/controllers",
        "//golangp/common/middleware",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_toheart_functrace//:functrace",
    ],
)
