load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["documents.go"],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/service",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/arx_center/models",
        "//golangp/common/initializers",
        "@com_github_toheart_functrace//:functrace",
    ],
)
