load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["server.go"],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/cmd/config",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)
