load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gitea_lib",
    srcs = ["gitea_sync_user.go"],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/migrate/gitea",
    visibility = ["//visibility:private"],
    deps = [
        "//golangp/apps/arx_center/gitea",
        "//golangp/apps/arx_center/models",
        "//golangp/common/initializers",
        "//golangp/config",
        "@io_gorm_gorm//:gorm",
    ],
)

go_binary(
    name = "gitea",
    embed = [":gitea_lib"],
    visibility = ["//visibility:public"],
)
