load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migration_user",
    srcs = ["add_user.go"],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/migrate/migration_user",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/arx_center/gitea",
        "//golangp/apps/arx_center/models",
        "//golangp/common/constants",
        "//golangp/common/initializers",
        "//golangp/common/utils",
        "//golangp/config",
        "@io_gorm_gorm//:go_default_library",
    ],
)
