load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "document.go",
        "random_create_user.go",
    ],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/migrate/model",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/arx_center/models",
        "//golangp/common/initializers",
        "//golangp/common/utils",
    ],
)
