load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dto",
    srcs = [
        "documents.go",
        "page.go",
        "prompt.go",
    ],
    importpath = "github.com/Arxtect/ArxBackend/golangp/apps/arx_center/service/dto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_toheart_functrace//:functrace",
        "@io_gorm_gorm//:gorm",
    ],
)
